<resources>
    <string name="app_name">小蜜蜂</string>
    <string name="home">首页</string>
    <string name="learn">学习</string>
    <string name="dynamic">动态</string>
    <string name="information">消息</string>
    <string name="mine">我的</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="can_not_get_server">无法访问服务器</string>
    <string name="user_not_exist">用户不存在</string>
    <string name="username_or_password_is_wrong">用户名或密码错误</string>
    <string name="logging_in">登录中...</string>
    <string name="username_or_password_is_null">用户名、密码不能为空</string>
    <string name="rePassword">确认密码</string>
    <string name="user_exist">用户已存在</string>
    <string name="registering">注册中...</string>
    <string name="password_are_different">密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="jump_over">%s 跳过</string>
    <string name="user_is_already_login">用户已经登录</string>
    <string name="praise">赞</string>
    <string name="comment">评论</string>
    <string name="notice">通知</string>
    <string name="like_and_favorite">赞和收藏</string>
    <string name="add_attention">新增关注</string>
    <string name="comment_">评论和@</string>
    <string name="not_see_message">【消息】</string>
    <string name="picker_cancel">取消</string>
    <string name="picker_done">完成</string>
    <string name="recall">撤回</string>
    <string name="msg_recall_by_self">您撤回了一条消息</string>
    <string name="msg_recall_by_user">%1$s 撤回了一条消息</string>
    <string name="attention">关注</string>
     <string name="fan">粉丝</string>
     <string name="access">访问</string>
     <string name="rank">排名</string>
     <string name="nickname">昵称</string>
     <string name="sex">性别</string>
     <string name="birthday">生日</string>
     <string name="signature">签名</string>
    <string name="logOut">退出</string>
    <string name="register_failed">注册失败</string>
</resources>
