<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/mainFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_fragment">

    </FrameLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/bg_select_radio_button"
                android:gravity="center"
                android:text="@string/home" />


            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/bg_select_radio_button"
                android:gravity="center"
                android:text="@string/learn" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/bg_select_radio_button"
                android:gravity="center"
                android:text="@string/dynamic" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/bg_select_radio_button"
                android:gravity="center"
                android:text="@string/information" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/bg_select_radio_button"
                android:gravity="center"
                android:text="@string/mine" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>
</RelativeLayout>