<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/base_topbar_view" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/my_checked" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="点击更换头像" />

    <LinearLayout
        android:id="@+id/nicknameLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="用户昵称" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=">" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/sexLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="男" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=">" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/birthdayLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="用户昵称" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=">" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signatureLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signature"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="个人简介" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=">" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/passwordLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密码"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:inputType="textPassword"
            android:text="******" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=">" />
    </LinearLayout>
</LinearLayout>